# Robotika-Sistem-Cerdas

Week 1/: Tugas_Week_1.md
Week 10/Google Colab/: Point_1.ipynb
Week 10/Google Collab/: Link Google Colab.md
Week 10/Webots/Document Scanner Simulation/: Screenshoot.md
Week 10/Webots/Fruit Detection Robot/: Screenshoot.md
Week 10/Webots/Visual Tracking dengan OpenCV/: Screenshoot.md
Week 11/Colab/: Information_Extraction.ipynb  Link Colab.md
Week 11/Simulasi/: Screenshoot.md
Week 12/Colab/: Introduction_to_Localization_and_Filtering_Theory_&_Parametric_filtering.ipynb  Link Colab.md
Week 12/Simulasi/: Screenshoot.md
Week 13/Colab/: Gambar Output.md  Link Colab.md  Parametric_Filtering.ipynb
Week 13/Webots/: Screenshoot.md
Week 13/Webots/Four Wheeled Robot/: Screenshoot.md
Week 13/Webots/Robot Positioning/: Screenshoot.md
Week 14/Prompt/Gerakan Robot Dengan Input Pengguna/: Screenshoot.md  main.rs
Week 14/Prompt/Penjadwalan Robot Dengan Prioritas/: Screenshoot.md  main.rs
Week 14/Prompt/Perencanaan Jalur Sederhana/: Screenshoot.md  main.rs
Week 14/Prompt/Robot dengan Model Probabilistik/: Cargo.toml  Screenshoot.md  main.rs
Week 14/Prompt/Robotik dengan Sistem Event Driven/: Screenshoot.md  main.rs
Week 14/Prompt/Simulasi Robot Menghindari Rintangan/: Screenshoot.md  main.rs
Week 14/Tutorial/Data Type/: Screenshoot.md  main.rs
Week 14/Tutorial/Hash Map/: Screenshoot.md  main.rs
Week 14/Tutorial/If Else/: Screenshoot.md  main.rs
Week 14/Tutorial/Install Rust/: Screenshoot.md
Week 14/Tutorial/Loops/: Screenshoot.md  main.rs
Week 14/Tutorial/arrays and vectors/: Screenshoot.md  main.rs
Week 15/UAS/: Link Youtube.md  README.md
Week 15/UAS/Chapter 1 - Introduction to ROS/: Command.md  Screenshoot.md  Script.md
Week 15/UAS/Chapter 2 - Getting Started with ROS Programming/: Command.md  Screenshoot.md  Script.md
Week 2/: Sertifikat.md  screenshoot gradebot.md  sourcecode python.py
Week 2/Command ROS/: Create a ROS Package.md  Create and Setup a Catkin Workspace.md  Understand What is a ROS Node.md  Write a ROS Node with Python.md
Week 2/Pengerjaan/: Create a ROS Package.md  Create and Setup a Catkin Workspace.md  Understand What is a ROS Node.md  Write a ROS Node with Python.md
Week 3/: Analisis.md  Screenshoot Pengerjaan.md
Week 3/File World Webots/: Download File.md  tugas3.wbt
Week 4/: Analisis Simulasi.md  Recording Robot.md
Week 4/Bukti Pengerjaan/: Link Record.md  Screenshoot RViz.md  Screenshoot.md
Week 4/Command ROS/: point a.md  point b.md  point c.md  point d.md  point e.md
Week 4/Screenshoot Pengerjaan/: point 1a.md
Week 4/Sourcecode/: C++.c  command_line.txt  hello_moveit.cpp  hello_moveit.py  pick_and_place.cpp  pick_and_place.py
Week 4/Sourcecode/Pick and Place with MoveIt Task Constructor/: CMakeLists.txt  package.xml  pick_and_place.launch.py  pick_and_place_with_moveit_task_constructor.cpp
Week 4/Sourcecode/Visualizing in RViz/: CMakeLists.txt  hello_moveit.cpp  hello_moveit.launch.py  package.xml
Week 4/Sourcecode/Your First Project/: CMakeLists.txt  hello_move_it.launch.py  hello_moveit.cpp  package.xml
Week 5/Bukti Pengerjaan/: 0_Quick Start within 3 Minutes.md  1_Document.md
Week 5/Command ROS/: Document.md  Quick Start Within 3 Minutes.md
Week 5/Sourcecode/: A*.py  Astar.py  Cell_Decomposition.py  Dijkstra.py
Week 6/Bukti Pengerjaan/: Implementasi Algoritma Rapidly-Expanding Random Trees (RRT) di ROS dengan Visualisasi Rviz.md  Implementasi dan Simulasi Probabilistic Roadmap (PRM) dengan Visualisasi Rviz.md  Implementasi dan Simulasi Probabilistic Roadmap (PRM) di Matplotlib.md  Implementasi dan Simulasi Probabilistic Roadmap (PRM).md
Week 6/Command ROS/: Point 1.md  Point 2.md  Point 3.md
Week 7/jetbot_basic_motion/: Bukti Pengerjaan.md
Week 7/jetbot_collect_data/: Bukti Pengerjaan.md  jetbot_collect_data.py
Week 7/jetbot_collision_avoidance/: Bukti Pengerjaan.md
Week 8/UTS/: Bukti Pengerjaan.md  README.md
Week 9/Camera/: screenshoot.md
Week 9/Camera Auto Focus/: screenshoot.md
Week 9/Camera Motion Blur/: screenshoot.md
Week 9/Camera Noise Mask/: screenshoot.md
Week 9/Camera Recognition/: screenshoot.md
Week 9/Camera Segmentation/: screenshoot.md
Week 9/Spherical Camera/: screenshoot.md
(+25 files in other folders)
