<?xml version="1.0"?>
<package format="2">
  <name>pick_and_place</name>
  <version>0.0.1</version>
  <description>Pick and Place tutorial with MoveIt Task Constructor</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_task_constructor</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_task_constructor</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
</package>
